--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
-markdown: kramdown
-theme: merlot
+title: Merlot theme
+description: Merlot is a theme for GitHub Pages.
+show_downloads: true
+google_analytics:
+theme: jekyll-theme-merlot
