--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Merlot theme
-description: Merlot is a theme for GitHub Pages.
+title: Drinking Games
+description: A curated selection of the finest entertainment.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-merlot
